@@ -1,4 +1,9 @@
 bear:
+Fixed the GetAvailable function to return correct times.
+Replaced the class Destructors in the load() function with delete.
+Disabled the auto pid parse code as its still buggy for Timeshifting.
+Fixed the line of code to update the duration, re converting to ref time rather than pcr time.
+ 
 Added a property page to the TSFileSink Filter.
 Added settings to the registry for the TSFileSink filter.
 
